@@ -208,6 +208,18 @@ bool ldns_resolver_usevc(const ldns_resolver *r);
  */
 bool ldns_resolver_fail(const ldns_resolver *r);
 /**
+ * Does the resolver apply default domain name
+ * \param[in] r the resolver
+ * \return true: yes, false: no
+ */
+bool ldns_resolver_defnames(const ldns_resolver *r);
+/**
+ * Does the resolver ignore TC bit
+ * \param[in] r the resolver
+ * \return true: yes, false: no
+ */
+bool ldns_resolver_igntc(const ldns_resolver *r);
+/**
  * Does the resolver do DNSSEC
  * \param[in] r the resolver
  * \return true: yes, false: no
